# prax-plugins

./: .gitignore  CHANGELOG.md  README.md  plugin.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
elevenmusic/: README.md  Skills.md  permissions.md  plugin.py
flight_search/: README.md  Skills.md  plugin.py
imagegen/: permissions.md  plugin.py
pdf2presentation/: README.md  Skills.md  plugin.py
radio/: README.md  Skills.md  permissions.md  plugin.py
tests/: test_elevenmusic.py  test_flight_search.py  test_imagegen.py  test_pdf2presentation.py  test_radio.py  test_txt2presentation.py
txt2presentation/: README.md  Skills.md  permissions.md  plugin.py
